[project]
name = "pubmed-fetcher"
version = "0.1.0"
description = "\"A CLI tool to fetch and filter PubMed research papers based on author affiliations with pharmaceutical or biotech companies.\""
authors = [
    {name = "Gireesh",email = "gireesh.eruvaram335@Zemosolabs.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
get-papers-list = "cli:main"
